sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: reassignment to val
swap=false
    ^AlgBubbleSort1:5: error: value ro is not a member of Int
	for (i<-0 ro lg-2){
                  ^AlgBubbleSort1:11: error: reassignment to val
}while (swap=true)
            ^